--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
-    "react-toastify": "^11.0.0"
+    "react-toastify": "^11.0.0",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@types/node": "^20",
