--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-toastify": "^11.0.0",
+    "recharts": "^2.15.0",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
